Solve 02 - Flex alignments + ul default margins

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -9,6 +13,18 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  
+  
+}
+
+.left-links ul,
+.right-links ul
+{
+  display: flex;
+  gap: 10px;
+  margin: 0;
+  padding: 0;
+  
 }
 
 ul {
